--- a/frontend/src/styles/_tokens.scss
+++ b/frontend/src/styles/_tokens.scss
@@ -2,7 +2,8 @@
 @use 'sass:math';
 
 // Color System
-$color-primary: #2563eb !default;
+// primary colors ff7300
+$color-primary: #ff7300 !default;
 $color-primary-dark: #1d4ed8 !default;
 $color-primary-light: #60a5fa !default;
 
