--- a/frontend/src/app/layout/members/members.component.html
+++ b/frontend/src/app/layout/members/members.component.html
@@ -49,9 +49,9 @@
       </div>
     </div>
 
-    <app-table>
+    <app-table class="members-table">
       <table mat-table [dataSource]="displayedMembers" matSort>
-        <ng-container matColumnDef="name">
+        <!-- <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
           <td mat-cell *matCellDef="let member">
             <div class="member-name">
@@ -62,7 +62,27 @@
               </div>
             </div>
           </td>
+        </ng-container> -->
+
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+          <td mat-cell *matCellDef="let member">
+            <div class="member-cell">
+              <app-avatar
+                [src]="member.avatarUrl"
+                [initials]="member.initials"
+                [color]="member.avatarColor"
+                [alt]="member.name"
+              ></app-avatar>
+
+              <div class="member-meta">
+                <span class="member-name">{{ member.name }}</span>
+                <span class="member-role">{{ member.role }}</span>
+              </div>
+            </div>
+          </td>
         </ng-container>
+        
 
         <ng-container matColumnDef="role">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Role</th>
