--- a/frontend/src/app/custom-layout/custom-layout.component.scss
+++ b/frontend/src/app/custom-layout/custom-layout.component.scss
@@ -15,7 +15,7 @@
     position: sticky;
     top: 0;
     align-self: start;
-    height: 100vh;
+    min-height: 100vh;
     background: var(--color-surface);
     z-index: 15;
 
@@ -43,7 +43,8 @@
   }
 
   &__content {
-    flex: 1;
+    flex: 1 0 auto;
+    min-height: 0;
     padding: tokens.space(6);
 
     @media (max-width: 1024px) {
