created the subtask module

--- a/frontend/src/app/layout/dashboard/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/layout/dashboard/components/dashboard/dashboard.component.html
@@ -148,7 +148,7 @@
 
 
         <!-- People -->
-        <div class="p-8c w-full">
+        <!-- <div class="p-8c w-full">
           <div class="cmn-card-wrapper h-full items-stretch xl:min-h-[290px] min-h-[200px] flex flex-col">
             <div class="flex flex-col justify-center ml-8c">
               <h4 class="fs-24 text-gray-200">People</h4>
@@ -188,7 +188,7 @@
               </mat-card>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- New Jobs this Month -->
         <!-- Houses Out this Month -->
         <!-- Completed this Month -->
