--- a/frontend/src/app/layout/tasks/list-view/list-view.component.html
+++ b/frontend/src/app/layout/tasks/list-view/list-view.component.html
@@ -226,4 +226,5 @@
   [priorities]="priorities"
   (close)="closeDetail()"
   (taskUpdated)="handleTaskUpdated($event)"
+  (subtaskOpen)="handleSubtaskOpen($event)"
 ></app-task-detail>
