--- a/frontend/src/app/layout/inbox/inbox.component.html
+++ b/frontend/src/app/layout/inbox/inbox.component.html
@@ -31,6 +31,7 @@
     </div>
 
       <!-- Task List Items -->
+       <!-- make scrollable -->
       <div class="task-list">
         <div 
           *ngFor="let update of inboxUpdates" 
