--- a/frontend/src/app/layout/inbox/inbox.component.scss
+++ b/frontend/src/app/layout/inbox/inbox.component.scss
@@ -4,12 +4,15 @@
   display: flex;
   flex-direction: column;
   gap: tokens.space(6);
+  min-height: 100%;
+  padding-bottom: 1.5rem;
 }
 
 .task-list-container {
   display: flex;
   flex-direction: column;
   gap: tokens.space(2);
+  max-height: calc(100vh - 220px);
 }
 
 .list-header {
@@ -38,9 +41,10 @@
 .task-list {
   display: flex;
   flex-direction: column;
-  max-height: calc(100vh - 320px);
+  max-height: calc(100vh - 260px);
   overflow-y: auto;
   padding-right: tokens.space(1);
+  padding-bottom: tokens.space(2);
 }
 
 .task-list::-webkit-scrollbar {
